--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>ControllerUsuario</servlet-name>
+  	<display-name>ControllerUsuario</display-name>
+  	<description></description>
+  	<servlet-class>controller.ControllerUsuario</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ControllerUsuario</servlet-name>
+  	<url-pattern>/ControllerUsuario</url-pattern>
+  </servlet-mapping>
 </web-app>
