--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,12 @@
   	<description></description>
   	<servlet-class>controller.ControllerProfesor</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>ControllerAlumno</servlet-name>
+  	<display-name>ControllerAlumno</display-name>
+  	<description></description>
+  	<servlet-class>controller.ControllerAlumno</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>ControllerUsuario</servlet-name>
   	<url-pattern>/ControllerUsuario</url-pattern>
@@ -23,5 +29,9 @@
   <servlet-mapping>
   	<servlet-name>ControllerProfesor</servlet-name>
   	<url-pattern>/ControllerProfesor</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ControllerAlumno</servlet-name>
+  	<url-pattern>/ControllerAlumno</url-pattern>
   </servlet-mapping>
 </web-app>
